--- a/ping.yaml
+++ b/ping.yaml
@@ -1,10 +1,12 @@
 ---
-- hosts: linux
-  gather_facts: no
-  tasks:
-    - ping
-
 - hosts: windows
-  gather_facts: no
   tasks:
-    - win_ping
+    - win_ping:
+
+
+
+- hosts: linux
+  tasks:
+    - ping:
+
+
