--- a/group_vars/windows/winrm_connection.yaml
+++ b/group_vars/windows/winrm_connection.yaml
@@ -1,5 +1,5 @@
 ---
 ansible_connection: winrm
-ansible_winrm_port: 5986
-ansible_winrm_transport: kerberos
+ansible_winrm_port: 5985
+ansible_winrm_transport: ntlm
 ansible_winrm_server_cert_validation: ignore
